# instructor-rs

./: .gitignore  Cargo.toml  README.md  test.json
examples/: basic.rs  recursive_validation.rs  streaming_example.rs  tool_calling.rs  validation_context.rs
internal_macros/: Cargo.toml
internal_macros/src/: lib.rs
model_traits_macro/: Cargo.toml
model_traits_macro/src/: lib.rs
shared/: Cargo.toml
shared/src/: enums.rs  lib.rs  mode.rs  utils.rs
src/: common.rs  enums.rs  error.rs  exceptions.rs  instructor.rs  iterable.rs  lib.rs  macros.rs  main.rs  mode.rs  object.rs  openai_schema.rs  patch.rs  process_response.rs  retry.rs  streaming.rs  traits.rs  types.rs  utils.rs
src/dsl/: iterable.rs  mod.rs
tests/: OpenaiSchemaTest.rs  enums.rs  mod.rs  openai_schema_test.rs  test_iterable.rs  utils_test.rs
