[package]
name = "instructor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = {version = "1.36.0", features = ["full"]}
validator = { version = "0.16", features = ["derive"] }
openai_api_rust = "0.1.8"
schemars = "0.8.16"

