[package]
name = "instructor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = {version = "1.36.0", features = ["full"]}

serde = "1.0.197"
serde_json = "1.0.115"
schemars = "0.8.16"
validator = { version = "0.16", features = ["derive"] }
openai-api-rs = "4.0.8"

syn = {version = "2.0.55", features = ["full"]}
garde = "0.18.0"

